<resources>
    <string name="app_name">InstaDate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="action_Register">Login</string>
    <string name="seperator">___________________________________</string>
    <string name="today">today</string>
    <string name="new_york_times">New York Times</string>
    <string name="action_RegisterEmail">Email</string>
    <string name="action_Customization">Customization</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="action_RegisterEmailHint">Email</string>
    <string name="action_RegisterButton">Register</string>
    <string name="action_RegisterPassword">Password</string>
    <string name="action_RegisterPasswordHint1">Password</string>
    <string name="action_RegisterPasswordHint2">Password Again</string>
    <string name="action_RegisterPasswordConfirm">Password</string>
    <string name="action_LoginButton">Login</string>
    <string name="action_LogoutButton">Logout</string>
    <string name="action_RegisterHere">Register Here</string>
    <string name="action_RegisterName">Name</string>
    <string name="action_RegisterNameHint">Name</string>
    <string name="action_about">About</string>
    <string name="Main_News">Description - main News</string>
    <string name="Main_Link">link to main News</string>
    <string name="title_activity_customization">CustomizationActivity</string>
    <string name="title_activity_custom_list">CustomList</string>
    <string name="SaveButton">Save Changes</string>
    <string name="action_exit">Exit</string>
    <string name="image_parsing">parsing</string>
    <string name="action_RegisterUser">New User?</string>
    <string name="action_AlreadyRegistered">Login</string>
    <string name="action_LoginHere">Login Here</string>
    <string name="action_moreAt">more at </string>
    <string name="action_moreAtLink">Here</string>
    <string name="title_activity_about_insta_date">AboutInstaDate</string>
    <string name="title_about">InstaDate, To Keep You Up To Date!</string>
    <string name="description_about">The InstaDate has been developed by Raqib. The App has been developed to keep the users up to date about the current Happenings and provides its users with the daily News Updates from almost all fields of life. The App is still in its development phase so if you have any suggestions, you can write to me by clicking the below Email Icon </string>
    <string name="action_FollowMe">Follow Me</string>
    <string name="heading">News Title</string>
    <string name="title_activity_detailed_newss">DetailedNewss</string>
    <string name="title_activity_detailed_news">DetailedNews</string>
    <string name="title_activity_customization_drawer">CustomizationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="importDrawer">Import</string>
    <string name="galleryDrawer">Gallery</string>
    <string name="title">title</string>
    <string name="news_details">news details</string>
    <string name="share">share</string>
    <string name="log_in">Sign Up</string>
    <string name="exit">Exit</string>
    <string name="customization">Customization</string>

    <string name="already_registered">Already Registered?</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_link_web_activity">Share Link</string>
    <string name="title_activity_navigation_drawer">InstaDate</string>
    <string name="name_of_user">Welcome</string>
    <string name="share_app">Share App</string>
    <string name="top_feeds">Top Stories</string>
    <string name="science">Science</string>
    <string name="international">International</string>
    <string name="national">Technology</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="support_us">Support Us</string>
    <string name="forget_password">Forget password?</string>
    <string name="register_link_on_login_page">Register Here</string>
    <string name="settings_main_menu">Settings</string>
    <string name="save_customization_to_database">Save</string>
    <string name="bookmarkNews">bookmarkNews</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="bookmarked_feeds">Bookmarked Feeds</string>
    <string name="saving_experience">Saving Experience</string>
    <string name="information_about_app">Information About App</string>
    <string name="want_to_leave">Want To Leave?</string>
    <string name="search_in_main_menu">Search…</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="FinancialExpress">FE</string>
    <string name="NewYorkTimes">NYT</string>
    <string name="OneIndia">OI</string>
    <string name="ScienceDaily">SD</string>
    <string name="drawer_log_out">Log Out</string>
    <string name="or">OR</string>
    <string name="BBC">BBC</string>
    <string name="Rediff">Rediff</string>
    <string name="facebook_app_id">1389191317758976</string>
    <string name="or_Sign_Up_using">Or Sign In Using</string>
    <string name="fb_login">FB Login</string>
    <string name="or_sign_in_using">or Sign In using</string>
    <string name="add_ons">Add ons</string>
    <string name="refresh">Refresh</string>
    <string name="gathering_data">Gathering the data, please be patient</string>
    <string name="splash_message">Sit tight, Setting things for you!</string>
    <string name="rightdrawer">rightDrawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Message_before_loading">Setting Data In Order, Please Wait… Slide Through Tabs To Refresh</string>
    <string name="kashmirglobal.com">KG</string>
    <string name="kashmirlife">KL</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="first_screen_intro">App that keeps you upto date</string>
    <string name="intro_message_2">Multi News categories</string>
    <string name="intro_message_1">RSS based news app</string>
        <string name="Introduction">InstaDate is an RSS(rich site summary) based NEWS App, collects NEWS from different sources and displays them in elegant way in InstaDate.
       The notifications are relevant and they don’t seem irritating. Breaking and trending news are presented instantly in real-time. Relevant Push Notifications are received. There is also a feature of Bookmarking, If you ever come across a NEWS Feed that you’d like to keep for easy access, you can Bookmark the NEWS Feed.
       </string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>
    <string name="gmail">Gmail</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="introduction1">(I) The user doesn’t have to remember websites of every news channel.</string>
    <string name="introduction2">(II) The news flashes of the news will be available on the same page or in the same window.</string>
    <string name="introduction3">(III) And if the user wants to read all the news he/she can click on the link and whole news will be displayed to the user.</string>
    <string name="introduction4">(IV) The news will getautomatically updated according to that very particular news website/App so that user can get the latest news happening.</string>
    <string name="local">Local</string>
    <string name="gadgets">Gadgets</string>
    <string name="trending">Trending</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="delete_the_bookmark">Delete</string>

</resources>