<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="6dp"
        card_view:contentPadding="5dp"
        card_view:paddingEnd="10dp"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="true"

        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:id="@+id/mainScreen"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBarNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:padding="10dp"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="140dp"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/new_york_times"
                android:layout_alignParentTop="true"
                />

            <customfonts.MyTextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/image"
                android:layout_alignLeft="@+id/newsScrollView"
                android:layout_alignStart="@+id/newsScrollView" />

            <ScrollView
                android:id="@+id/newsScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsTitle"
                android:overScrollMode="always"
                >

            <customfonts.MyTextView
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_details"
                android:textSize="21sp"
                android:textColor="#1b1919"
                android:includeFontPadding="true"
                android:paddingTop="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="20dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="5dp" />
            </ScrollView>

            <customfonts.MyTextView
                android:id="@+id/newsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="#1b1919"
                android:paddingBottom="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignBottom="@+id/newsScrollView"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp" />

            <customfonts.MyTextView
                android:id="@+id/moreAtVirtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/action_moreAt"
                android:textColor="#1b1919"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignTop="@+id/moreAtLink"
                android:layout_alignLeft="@+id/image"
                android:paddingTop="6sp"
                android:paddingBottom="5dp"
                android:layout_alignStart="@+id/image" />

            <customfonts.MyTextView
                android:id="@+id/moreAtLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/action_moreAtLink"
                android:textColor="#05515b"
                android:layout_marginLeft="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignBottom="@+id/newsDate"
                android:layout_toRightOf="@+id/moreAtVirtual"
                android:layout_toEndOf="@+id/moreAtVirtual" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:onClick="shareWith"
                android:background="#ffffff"
                android:contentDescription="@string/share"
                android:layout_alignBottom="@+id/moreAtVirtual"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>

