<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/main_image" />

        <customfonts.MyTextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="italic|bold"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/drawerLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:onClick="goToLoginActivity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:textColor="#1a237e"
            />

        <TextView
            android:text="@string/drawer_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drawerLogOut"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:textColor="#d50000"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0"/>
    </LinearLayout>


    <customfonts.MyTextViewDescription
        android:id="@+id/drawerUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textColor="#ffffff"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/name_of_user"
        android:alpha="0"/>

</LinearLayout>
