<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/loginCoordinatorLayout"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context="com.example.raqib.instadate.LoginActivity"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/layer_user"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/UserEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_RegisterEmailHint"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:background="#4a5a71"> </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/layer0"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/UserLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_RegisterPasswordHint1"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:textColor="#fff"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:background="#4a5a71"> </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="60dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/LoginButton"
                    android:textColor="#707070"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:background = "@drawable/roundedbutton"
                    android:text="@string/action_LoginButton"
                    />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/forget_password"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_using"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="#ffffff"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    />
                <com.google.android.gms.common.SignInButton
                    android:layout_width="wrap_content"
                    android:id="@+id/googleSignUpButton"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_height="37dp">
                </com.google.android.gms.common.SignInButton>
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newUserVirtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_RegisterUser"
                android:textColor="#bdbdbd"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/newUser"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_link_on_login_page"
                android:textColor="#ffffff"
                android:textSize="22sp"
                />

        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="380dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@drawable/main_image"
            />
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>

